# synapsai-python

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
src/synapsai/: __init__.py  client.py  exceptions.py  logging.py  processing.py  requirements.txt  utils.py
src/synapsai/resources/: __init__.py  audio.py  chat.py  classifications.py  completions.py  embeddings.py  feature_extraction.py  fill_mask.py  images.py  models.py  question_answering.py  rerank.py  videos.py
src/synapsai/types/: __init__.py  audio.py  classifications.py  common.py  completion.py  embeddings.py  feature_extraction.py  fill_mask.py  images.py  models.py  question_answering.py  rerank.py  videos.py
synapsai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
